// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password SNAPSHOTS should render basic usage 1`] = `
<div>
  <div
    class="password-wrapper"
  >
    <div
      class="password-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="password-element"
        type="password"
        value=""
      />
      <i
        class="password-mask-icon"
      />
    </div>
    <div>
      Не меньше 5 символов и со знаком препинания — нам важна ваша безопасность.
    </div>
  </div>
</div>
`;

exports[`Password SNAPSHOTS should render different component states should render disabled 1`] = `
<div>
  <div
    class="password-wrapper"
  >
    <div
      class="password-element-wrapper disabled"
    >
      <input
        aria-invalid="false"
        class="password-element"
        disabled=""
        type="password"
        value=""
      />
      <i
        class="password-mask-icon"
      />
    </div>
  </div>
</div>
`;

exports[`Password SNAPSHOTS should render value in controllable mode 1`] = `
<div>
  <div
    class="password-wrapper"
  >
    <div
      class="password-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="password-element"
        type="password"
        value="test value"
      />
      <i
        class="password-mask-icon"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`Password SNAPSHOTS should render value in controllable mode 2`] = `
<div>
  <div
    class="password-wrapper"
  >
    <div
      class="password-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="password-element"
        type="password"
        value="new test value"
      />
      <i
        class="password-mask-icon"
      />
    </div>
    <div />
  </div>
</div>
`;
